<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center">

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_weight="4"
        android:layout_width="0dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_margin="10dp"
            android:text="@string/choice_dealer"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/choice_none_dealer_hint"
            android:text="@string/choice_dealer_hint"
            android:textSize="30sp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/choice_dealer_recycle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="match_parent">


        <Button
            android:layout_margin="20dp"
            android:id="@+id/choice_start_restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_start_restart" />

        <Button
            android:layout_margin="20dp"
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_result_show" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/choice_generate_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_result_report" />
    </LinearLayout>



</LinearLayout>

