<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_title"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="300sp"
            android:layout_height="400sp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingTop="50sp">

            <LinearLayout
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10sp">

                <ImageView
                    android:layout_margin="5sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_login_name" />

                <EditText
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/login_name_hint" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10sp">

                <ImageView
                    android:layout_margin="5sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_login_password" />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:layout_weight="1"
                    android:hint="@string/login_password_hint" />
            </LinearLayout>

            <Button
                android:id="@+id/login_commit"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:text="@string/login_commit" />

            <Button
                android:id="@+id/login_off_line"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:text="@string/login_off_line" />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>

